Update tagline in '_config.yml' to a new inspirational phrase. Remove outdated content from '_tabs/about.md' to streamline the section and enhance focus on current interests and skills.

--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ timezone: Asia/Seoul
 
 title: Random Notes # the main title
 
-tagline: Thoughts, ideas, and everything in between # it will display as the subtitle
+tagline: Let the universe work its magic. # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
   Personal blog sharing insights on machine learning, deep learning, data science, and research.
