--- a/_config.yml
+++ b/_config.yml
@@ -3,12 +3,9 @@
 # Import the theme
 theme: jekyll-theme-chirpy
 
-# Plugins for GitHub Pages
+# Plugins for GitHub Pages (only supported plugins)
 plugins:
   - jekyll-paginate
-  - jekyll-sitemap
-  - jekyll-feed
-  - jekyll-seo-tag
 
 # The language of the webpage › http://www.lingoes.net/en/translator/langcode.htm
 # If it has the same name as one of the files in folder `_data/locales`, the layout language will also be changed,
