--- a/_config.yml
+++ b/_config.yml
@@ -62,7 +62,7 @@ analytics:
   google:
     id: G-883467JTZW
   goatcounter:
-    id: # fill in your GoatCounter ID
+    id: jkim1209
   umami:
     id: # fill in your Umami ID
     domain: # fill in your Umami domain
@@ -76,7 +76,7 @@ analytics:
 
 # Page views settings
 pageviews:
-  provider: # now only supports 'goatcounter'
+  provider: goatcounter
 
 # Prefer color scheme setting.
 #
